# comet

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: cli-e2e.yml  core.yml  example-app.yml
benches/: native_adapter.rs  nebula_sql.rs
comet-auth/: Cargo.toml
comet-auth-macros/: Cargo.toml
comet-auth-macros/src/: lib.rs
comet-auth/migrations/: 0001_comet_auth.sql  0002_comet_auth_rbac.sql
comet-auth/src/: authz.rs  config.rs  cookie.rs  error.rs  lib.rs  nebula.rs  oauth.rs  oidc.rs  routes.rs  session.rs  store.rs
comet-auth/tests/: requires_auth_macro.rs
comet-cli/: Cargo.toml  README.md
comet-cli/src/: casing.rs  cli.rs  discover.rs  entity_introspect.rs  fieldspec.rs  main.rs  rpc.rs  rustfile.rs  schema_dump.rs  snapshot.rs
comet-cli/src/commands/: auth.rs  migrate.rs  mod.rs  new.rs  rls.rs  rpc.rs  test.rs
comet-cli/src/commands/generate/: entity.rs  mod.rs  route.rs
comet-cli/templates/: Cargo.toml.tmpl  README.md.tmpl  gitignore.tmpl  package.json.tmpl  src_app.rs.tmpl  src_entry.rs.tmpl  src_lib.rs.tmpl  tasks_error.rs.tmpl  tasks_mod.rs.tmpl  tasks_model.rs.tmpl  tasks_routes.rs.tmpl  wrangler.jsonc.tmpl
comet-cli/tests/: e2e.sh
comet-macros/: Cargo.toml
comet-macros/src/: lib.rs
docs/: auth.md  comet-cli-roadmap.md  comet-cli-tracker.md  direct-dispatch-adapter.rs  nebula-implementation-tracker.md  nebula-roadmap.md  rocket-upstream-notes.md  rocket-worker-roadmap.md  rpc.md  testing.md
docs-site/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  wrangler.jsonc
docs-site/app/: layout.tsx
docs-site/app/(home)/: page.tsx
docs-site/app/[lang]/: layout.tsx
docs-site/app/[lang]/(home)/: layout.tsx  page.tsx
docs-site/app/[lang]/docs/: layout.tsx
docs-site/app/[lang]/docs/[[...slug]]/: page.tsx
docs-site/app/api/search/: route.ts
docs-site/app/docs/: layout.tsx
docs-site/app/docs/[[...slug]]/: page.tsx
docs-site/components/: mdx.tsx
docs-site/content/docs/: auth.en.mdx  auth.mdx  cloudflare-adapter.en.mdx  cloudflare-adapter.mdx  comet-cli.en.mdx  comet-cli.mdx  example-walkthrough.en.mdx  example-walkthrough.mdx  getting-started.en.mdx  getting-started.mdx  index.en.mdx  index.mdx  meta.json  nebula-orm.en.mdx  nebula-orm.mdx  rpc.en.mdx  rpc.mdx
docs-site/lib/: i18n.ts  layout.shared.tsx  source.ts
examples/cloudflare-worker/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.jsonc
examples/cloudflare-worker/migrations/: 0001_init.sql  0002_comet_auth.sql
examples/cloudflare-worker/src/: app.rs  entry.rs  lib.rs  model.rs  routes.rs
examples/cloudflare-worker/src/assets/: routes.rs
examples/cloudflare-worker/src/boards/: board_task.rs  mod.rs  model.rs  routes.rs
examples/cloudflare-worker/src/demo/: routes.rs
examples/cloudflare-worker/src/orgs/: model.rs
examples/cloudflare-worker/src/tasks/: error.rs  model.rs  routes.rs
examples/cloudflare-worker/src/users/: model.rs
examples/cloudflare-worker/tests/: integration.sh  perf.sh
examples/react-native-rpc/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
examples/react-native-rpc/src/: comet-rpc.ts
patches/: comet-worker-performance-followups.patch  rocket-worker-feature.patch  rocket-worker-streaming-request.patch
src/: lib.rs  nebula.rs
src/cloudflare/: bindings.rs  mod.rs  r2.rs  tests.rs  websocket.rs
src/nebula/: column.rs  d1.rs  migration.rs  mod.rs  query.rs  relationships.rs  rls.rs  schema.rs  tests.rs  value.rs
tests/: nebula_derive.rs  nebula_derive_ui.rs
tests/ui/: nebula_derive_auto_non_integer.rs  nebula_derive_auto_non_integer.stderr  nebula_derive_duplicate_column.rs  nebula_derive_duplicate_column.stderr  nebula_derive_invalid_foreign_key.rs  nebula_derive_invalid_foreign_key.stderr  nebula_derive_multiple_primary_keys.rs  nebula_derive_multiple_primary_keys.stderr  nebula_derive_rls_empty_custom.rs  nebula_derive_rls_empty_custom.stderr  nebula_derive_rls_public_with_operation.rs  nebula_derive_rls_public_with_operation.stderr  nebula_derive_rls_rbac_without_claim.rs  nebula_derive_rls_rbac_without_claim.stderr  nebula_derive_rls_unknown_column.rs  nebula_derive_rls_unknown_column.stderr  nebula_derive_tuple_struct.rs  nebula_derive_tuple_struct.stderr  nebula_derive_unsupported_type.rs  nebula_derive_unsupported_type.stderr
