[package]
name = "comet"
version = "0.1.0"
edition = "2024"
description = "Run Rocket routes on Cloudflare Workers, backed by a patched Rocket that compiles to wasm32-unknown-unknown."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rocket", "cloudflare", "workers", "wasm", "worker"]
categories = ["web-programming::http-server", "wasm"]
repository = "https://github.com/viniciusamelio/comet"
exclude = ["vendor/rocket/core/lib/tests", "vendor/rocket/core/lib/benches"]

[workspace]
members = ["comet-auth", "comet-auth-macros", "comet-cli", "examples/cloudflare-worker"]
resolver = "3"

[features]
default = ["native-client"]
cloudflare = ["dep:rocket", "dep:worker", "dep:send_wrapper", "dep:async-stream", "dep:futures-channel"]
cloudflare-d1 = ["cloudflare", "worker/d1"]
cloudflare-hyperdrive = ["cloudflare"]
cloudflare-kv = ["cloudflare"]
cloudflare-queue = ["cloudflare", "worker/queue"]
cloudflare-r2 = ["cloudflare"]
cloudflare-service = ["cloudflare"]
cloudflare-websocket = ["cloudflare"]
nebula = ["dep:comet-macros"]
nebula-d1 = ["nebula", "cloudflare-d1", "dep:serde"]
nebula-schema = ["nebula", "dep:serde"]
native-client = ["dep:rocket"]

[dependencies]
rocket = { path = "vendor/rocket/core/lib", default-features = false, features = ["json", "worker"], optional = true }
thiserror = "2"
worker = { version = "0.8.5", optional = true }
send_wrapper = { version = "0.6", features = ["futures"], optional = true }
async-stream = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }
futures-util = "0.3"
bytes = "1"
serde = { version = "1", optional = true, features = ["derive"] }
comet-macros = { path = "comet-macros", optional = true }

[dev-dependencies]
criterion = "0.5"
trybuild = "1"
serde_json = "1"

[[bench]]
name = "native_adapter"
harness = false

[[bench]]
name = "nebula_sql"
harness = false
required-features = ["nebula"]
