[package]
name = "comet-auth-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for comet-auth route ergonomics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/viniciusamelio/comet"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "printing", "proc-macro"] }
