[package]
name = "comet-auth"
version = "0.1.0"
edition = "2024"
description = "Authentication runtime for Comet routes on Cloudflare Workers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/viniciusamelio/comet"

[features]
default = ["native-client"]
cloudflare = ["dep:comet", "dep:worker"]
native-client = []

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
comet = { path = "..", default-features = false, features = ["cloudflare-d1", "cloudflare-kv"], optional = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
p256 = { version = "0.14.0-pre.2", features = ["ecdsa", "pem", "pkcs8"] }
rocket = { path = "../vendor/rocket/core/lib", default-features = false, features = ["json", "worker"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
url = "2"
worker = { version = "0.8.5", optional = true, features = ["d1"] }

[dev-dependencies]
serde_json = "1"
