[package]
name = "comet-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for comet."
license = "MIT OR Apache-2.0"
repository = "https://github.com/viniciusamelio/comet"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "parsing", "printing", "proc-macro"] }
