[package]
name = "comet-cloudflare-worker-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
comet = { path = "../..", default-features = false, features = ["cloudflare"] }
console_error_panic_hook = "0.1.7"
rocket = { path = "../../vendor/rocket/core/lib", default-features = false, features = ["json", "worker"] }
wasm-bindgen = "0.2"
worker = { version = "0.8.5", features = ["d1", "queue"] }
